--- a/src/assets/scss/layout/_about.scss
+++ b/src/assets/scss/layout/_about.scss
@@ -1,238 +1,168 @@
 .about {
 	background-color: #158371;
+	@include pad-mar($pl: 142px);
 
-	padding-left: 142px;
-	/* 142px */
-}
 
-.about__inner {
-	display: flex;
-}
-.about__wrap {
-	height: 800px;
-}
-.about__img {
-	width: 691px;
-	/*691px*/
-	height: 818px;
-	/*818px*/
-	transform: translateY(0px) rotate(-7deg);
-	-webkit-transform: translateY(0px) rotate(-7deg);
-	-moz-transform: translateY(0px) rotate(-7deg);
-	-ms-transform: translateY(0px) rotate(-7deg);
-	-o-transform: translateY(0px) rotate(-7deg);
-}
-
-.about__wrapper {
-	display: flex;
-	flex-direction: column;
-
-	margin-left: 142px;
-	/* 142px */
-}
-
-.about__title {
-	max-width: 660px;
-	/* 660px */
-
-	margin-bottom: 55px;
-	/* 55px */
-	margin-top: 80px;
-	/* 80px */
-
-	font-size: 3.4375rem;
-	/* 55px */
-	line-height: 1.1em;
-}
-
-.about__title--orange {
-	color: #cae941;
-
-	position: relative;
-}
-
-.about__title--orange::before {
-	position: absolute;
-
-	content: "";
-
-	display: block;
-
-	background: no-repeat center/cover url(../images/line.png);
-
-	top: 60px;
-	/* 60px */
-	left: -5px;
-	/* -5px */
-
-	width: 450px;
-	/* 450px */
-	height: 13px;
-	/* 13px */
-}
-
-.about__list {
-	list-style-image: url(../images/li.png);
-
-	margin-bottom: 32px;
-	/* 32px */
-	padding-left: 30px;
-	/* 30px */
-}
-
-.about__item {
-	font-size: 1.3125rem;
-	/* 21px */
-	line-height: 1.05em;
-
-	margin-bottom: 22px;
-	/* 22px */
-}
-
-.about__item--bold {
-	font-weight: 800;
-}
-
-.about__btn {
-	position: relative;
-	width: 382px;
-	/*382px*/
-	height: 63px;
-	/*63px*/
-	text-indent: -5.25rem;
-	/* 84px */
-
-	border-radius: 30px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	-ms-border-radius: 30px;
-	-o-border-radius: 30px;
-}
-
-.about__btn::before {
-	content: "";
-
-	position: absolute;
-
-	display: block;
-
-	top: 22px;
-	/* 22px */
-	left: 305px;
-	/* 305px */
-
-	width: 30px;
-	/* 30px */
-	height: 16px;
-	/* 16px */
-
-	background: no-repeat center/cover url("../images/arrow.png");
-}
-@media only screen and (max-width: 1440px) {
-	.about {
-		padding-left: 80px;
-		/* 80px */
-		max-height: 1000px;
-		/* 1000px */
+	&__inner {
+		@include flex();
 	}
 
-	.about__wrapper {
-		margin-left: 80px;
-		/* 80px */
+	&__wrap {
+		height: 800px;
 	}
 
-	.about__title {
-		margin-top: 65px;
-		/* 80px */
-	}
-	.about__title--orange::before {
-		top: 120px;
-		/* 120px */
-		left: -320px;
-		/* -320px */
-		width: 420px;
-		/* 420px */
-	}
-}
-
-@media only screen and (max-width: 992px) {
-}
-
-@media only screen and (max-width: 768px) {
-	.about {
-		max-height: 1660px;
-		/* 1660px */
-
-		padding: 56px 0 100px 38px;
-		/* 56px 0 100px 38px*/
+	&__img {
+		@include box-size ($w: 691px, $h: 818px);
+		transform: translateY(0px) rotate(-7deg);
+		-webkit-transform: translateY(0px) rotate(-7deg);
+		-moz-transform: translateY(0px) rotate(-7deg);
+		-ms-transform: translateY(0px) rotate(-7deg);
+		-o-transform: translateY(0px) rotate(-7deg);
 	}
 
-	.about__inner {
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
+	&__wrapper {
+		@include flex ($fd: column);
+		@include pad-mar ($ml: 142px);
 	}
 
-	.about__wrapper {
-		flex-direction: column;
-
-		margin-left: 0;
-		/* 142px */
-	}
-}
-
-@media only screen and (max-width: 360px) {
-	.about {
-		padding-left: 12px;
-		/* 12px */
-	}
-
-	.about__img {
-		width: 337px;
-		/*337px*/
-		height: 399px;
-		/*399px*/
-	}
-
-	.about__title {
+	&__title {
 		max-width: 660px;
 		/* 660px */
-
-		font-size: 2.75rem;
-		/* 44px */
-
-		margin-bottom: 60px;
-		/* 60px */
-		margin-top: 50px;
-		/* 50px */
+		@include pad-mar ($mt: 80px, $mb: 55px);
+		@include font ($fs: 3.4375rem, $lh: 1.1em);
 	}
 
-	.about__title--orange::before {
-		top: 95px;
-		/* 95px */
-		left: -260px;
-		/* -260px */
+	&__title--orange {
+		color: #cae941;
 
-		width: 305px;
-		/* 305px */
-		height: 9px;
-		/* 9px */
+		position: relative;
 	}
 
-	.about__btn {
-		font-size: 1.125rem;
-		/*18px*/
-
-		width: 343px;
-		/*343px*/
+	&__title--orange::before {
+		content: "";
+		display: block;
+		background: no-repeat center/cover url(../images/line.png);
+		@include pos-abs ($t: 60px, $l: -5px);
+		@include box-size ($w: 450px, $h: 13px);
 	}
 
-	.about__btn::before {
-		left: 280px;
-		/* 280px */
+	&__list {
+		list-style-image: url(../images/li.png);
+		@include pad-mar ($pl: 30px, $mb: 32px);
 	}
 
-	.about__item--bold {
-		line-height: 1.5em;
+	&__item {
+		@include font ($fs: 1.3125rem, $lh: 1.05em);
+		@include pad-mar($mb: 22px);
+	}
+
+	&__item--bold {
+		font-weight: 800;
+	}
+
+	&__btn {
+		position: relative;
+		@include box-size ($w: 382px, $h: 63px);
+		text-indent: -5.25rem;
+		/* 84px */
+		border-radius: 30px;
+		-webkit-border-radius: 30px;
+		-moz-border-radius: 30px;
+		-ms-border-radius: 30px;
+		-o-border-radius: 30px;
+	}
+
+	&__btn::before {
+		content: "";
+		@include pos-abs ($t: 22px, $l: 305px);
+		@include box-size ($w: 30px, $h: 16px);
+		display: block;
+		background: no-repeat center/cover url("../images/arrow.png");
+	}
+
+	@media only screen and (max-width: 1440px) {
+		.about {
+			@include pad-mar ($pl: 80px);
+			max-height: 1000px;
+			/* 1000px */
+		}
+
+		&__wrapper {
+			@include pad-mar ($ml: 80px);
+		}
+
+		&__title {
+			@include pad-mar ($mt: 65px);
+		}
+
+		&__title--orange::before {
+
+			top: 120px;
+			/* 120px */
+			left: -320px;
+			/* -320px */
+			@include box-size ($w: 420px);
+		}
+	}
+
+	@media only screen and (max-width: 992px) {}
+
+	@media only screen and (max-width: 768px) {
+		.about {
+			max-height: 1660px;
+			/* 1660px */
+			@include pad-mar ($pt: 56px, $pr: 0, $pb: 100px, $pl: 38px);
+		}
+
+		&__inner {
+			@include flex ($jc: center, $ai: center, $fd: column);
+		}
+
+		&__wrapper {
+			flex-direction: column;
+			@include pad-mar ($ml: 0);
+		}
+	}
+
+	@media only screen and (max-width: 360px) {
+		.about {
+			@include pad-mar ($pl: 12px);
+		}
+
+		&__img {
+			@include box-size ($w: 337px, $h: 399px);
+		}
+
+		&__title {
+			max-width: 660px;
+			/* 660px */
+
+			font-size: 2.75rem;
+			/* 44px */
+			@include pad-mar ($mt: 50px, $mb: 60px);
+		}
+
+		&__title--orange::before {
+			top: 95px;
+			/* 95px */
+			left: -260px;
+			/* -260px */
+			@include box-size ($w: 305px, $h: 9px);
+		}
+
+		&__btn {
+			font-size: 1.125rem;
+			/*18px*/
+			@include box-size ($w: 343px);
+		}
+
+		&__btn::before {
+			left: 280px;
+			/* 280px */
+		}
+
+		&__item--bold {
+			line-height: 1.5em;
+		}
 	}
 }
