--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -22,7 +22,7 @@
 	&__personal {
 		position: relative;
 		@include pad-mar ($mr: 134px);
-		
+
 		&::before {
 			@include pseudo ($t: 10px, $l: 205px);
 			@include box-size ($w: 48px, $h: 2px);
@@ -32,7 +32,7 @@
 
 	&__logo {
 		@include pos-abs ($t: 56%, $l: 50%);
-			}
+	}
 
 	&__burger-btn {
 		@include pos-fix ($t: 15px, $r: 25px);
@@ -40,7 +40,7 @@
 		display: block;
 		z-index: 1;
 		cursor: pointer;
-		}
+	}
 
 	&__content {
 		@include flex ($jc: center, $ai: center, $fd: column);
@@ -53,7 +53,7 @@
 		text-indent: -5.25rem;
 		/*84px*/
 		position: relative;
-		
+
 
 		&::before {
 			@include pseudo ($t: 27px, $l: 210px);
@@ -74,37 +74,36 @@
 			display: none;
 		}
 
-		&__burger-line,
-		&__burger-line::after,
-		&__burger-line::before {
-			background-color: #c7c5c4;
-			content: "";
-			cursor: pointer;
-			@include box-size ($w: 35px, $h: 2px);
-			position: relative;
-			display: block;
-			transition: all 0.5s ease;
-		}
+		&__burger-line {
 
-		&__burger-line::after,
-		&__burger-line::before {
-			position: absolute;
-			right: 0;
-		}
-
-		&__burger-line::after {
-			bottom: 10px;
-			width: 40px;
-		}
-
-		&__burger-line::before {
-			top: 10px;
-			width: 30px;
+			&::after,
+			&::before {
+				background-color: #c7c5c4;
+				content: "";
+				cursor: pointer;
+				@include box-size ($w: 35px, $h: 2px);
+				position: relative;
+				display: block;
+				transition: all 0.5s ease;
+			}
+			&::after,
+			&::before {
+				position: absolute;
+				right: 0;
+			}
+			&::after {
+				bottom: 10px;
+				width: 40px;
+			}
+			&::before {
+				top: 10px;
+				width: 30px;
+			}
 		}
 
 		&__right-block {
 			@include pad-mar($mt: 160px, $mr: 0, $mb: 240px, $ml: 0);
-			}
+		}
 
 		&__logo {
 			display: block;
