--- a/src/assets/scss/layout/_instagram.scss
+++ b/src/assets/scss/layout/_instagram.scss
@@ -2,89 +2,85 @@
 	margin: 0 auto;
 
 	text-align: center;
-}
 
-.instagram__inner {
-	position: relative;
-}
+	&__inner {
+		position: relative;
+	}
 
-.instagram__title {
-	font-size: 1.5rem;
-	/*24px*/
-	text-align: center;
-	position: relative;
-	display: inline-block;
-	margin-bottom: 45px;
-}
+	&__title {
+		font-size: 1.5rem;
+		/*24px*/
+		text-align: center;
+		position: relative;
+		display: inline-block;
+		margin-bottom: 45px;
 
-.instagram__title::before {
-	position: absolute;
+		&::before {
+			position: absolute;
 
-	content: "";
+			content: "";
 
-	display: block;
+			display: block;
 
-	background: no-repeat center/cover url("../images/instagramm.png");
+			background: no-repeat center/cover url("../images/instagramm.png");
 
-	width: 26px;
-	height: 26px;
+			width: 26px;
+			height: 26px;
 
-	top: 0;
-	left: -40px;
-}
+			top: 0;
+			left: -40px;
+		}
+	}
 
-.instagram__link {
-	color: inherit;
-	text-align: center;
-}
+	&__link {
+		color: inherit;
+		text-align: center;
+	}
 
-.instagram__inner {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	overflow-x: auto;
-}
+	&__inner {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		overflow-x: auto;
+	}
 
-.instagram__picture {
-	position: relative;
-	background-repeat: no-repeat;
-	background-size: cover;
+	&__picture {
+		position: relative;
+		background-repeat: no-repeat;
+		background-size: cover;
 
-	flex: 1 1 20%;
-}
+		flex: 1 1 20%;
 
-.instagram__picture::before {
-	position: absolute;
+		&::before {
+			position: absolute;
 
-	content: "";
+			content: "";
 
-	display: block;
+			display: block;
 
-	background: no-repeat center/cover url("../images/instaramm_white.png");
+			background: no-repeat center/cover url("../images/instaramm_white.png");
 
-	width: 26px;
-	height: 26px;
+			width: 26px;
+			height: 26px;
 
-	bottom: 25px;
-	right: 20px;
+			bottom: 25px;
+			right: 20px;
 
-	z-index: 1;
-}
+			z-index: 1;
+		}
+	}
 
-.instagram__img {
-	object-fit: contain;
-	width: 100%;
-}
+	&__img {
+		object-fit: contain;
+		width: 100%;
+	}
 
-/* instagram */
-@media only screen and (max-width: 1440px) {
-}
+	/* instagram */
+	@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+	@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+	@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
+	@media only screen and (max-width: 320px) {}
 }
