--- a/src/assets/scss/layout/_smoothies.scss
+++ b/src/assets/scss/layout/_smoothies.scss
@@ -20,27 +20,27 @@
 		background-color: #f6edde;
 	}
 
-	.smoothies__item {
+	&__item {
 		@include flex ($jc: flex-end, $ai: center, $fd: column);
 		@include box-size($w: 25%, $h: 195px);
 		background-color: #fff;
 		@include pad-mar($pt: 28px, $pr: 0, $pb: 40px, $pl: 0);
+
+		&:nth-child(-n + 8) {
+			border-right: 2px solid #f6edde;
+		}
+
+		&:nth-child(-n + 4) {
+			border-bottom: 2px solid #f6edde;
+		}
+
+		&:nth-child(4),
+		&:last-child {
+			border-right: none;
+		}
 	}
 
-	.smoothies__item:nth-child(-n + 8) {
-		border-right: 2px solid #f6edde;
-	}
-
-	.smoothies__item:nth-child(-n + 4) {
-		border-bottom: 2px solid #f6edde;
-	}
-
-	.smoothies__item:nth-child(4),
-	.smoothies__item:last-child {
-		border-right: none;
-	}
-
-	.smoothies__desc {
+	&__desc {
 		@include font ($fs: 1.5625rem, $lh: 1.6em, $ls: -0.02em, $fw: 800);
 		@include pad-mar($mt: 27px);
 		color: #f2612d;
@@ -53,63 +53,63 @@
 	@media only screen and (max-width: 992px) {}
 
 	@media only screen and (max-width: 768px) {
-		.smoothies {
+		& {
 			@include pad-mar($pt: 48px, $pr:0, $pb: 90px, $pl: 0);
 		}
 
-		.smoothies__text {
+		&__text {
 			max-width: 700px;
 			/* 700px */
 		}
 
-		.smoothies__cards {
+		&__cards {
 			max-width: 540px;
 			/* 1050px */
 		}
 
-		.smoothies__item {
+		&__item {
 			width: 50%;
 			@include pad-mar($pb: 30px);
-		}
 
-		.smoothies__item:nth-child(-n + 8),
-		.smoothies__item:nth-child(-n + 4),
-		.smoothies__item:nth-child(4),
-		.smoothies__item:last-child {
-			border: none;
-		}
+			&:nth-child(-n + 8),
+			&:nth-child(-n + 4),
+			&:nth-child(4),
+			&:last-child {
+				border: none;
+			}
 
-		.smoothies__item:nth-child(odd) {
-			border-right: 2px solid #f6edde;
-			border-bottom: 2px solid #f6edde;
-		}
+			&:nth-child(odd) {
+				border-right: 2px solid #f6edde;
+				border-bottom: 2px solid #f6edde;
+			}
 
-		.smoothies__item:nth-child(even) {
-			border-bottom: 2px solid #f6edde;
-		}
+			&:nth-child(even) {
+				border-bottom: 2px solid #f6edde;
+			}
 
-		.smoothies__item:nth-child(7),
-		.smoothies__item:last-child {
-			border-bottom: none;
+			&:nth-child(7),
+			&:last-child {
+				border-bottom: none;
+			}
 		}
 	}
 
 	@media only screen and (max-width: 360px) {
-		.smoothies {
+		& {
 			@include pad-mar($pt: 40px, $pr: 0, $pb: 90px, $pl: 0);
 		}
 
-		.smoothies__title {
+		&__title {
 			@include pad-mar ($mt: 22px);
 		}
 
-		.smoothies__text {
+		&__text {
 			max-width: 338px;
 			/* 338px */
 			@include pad-mar($mt: 0, $mr: auto, $mb: 60px);
 		}
 
-		.smoothies__desc {
+		&__desc {
 			@include font ($fs: 1.25rem);
 			@include pad-mar ($mt: 27px);
 		}
